native/crates/specular-scene/tests/snapshots/panels__color_dropdown.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen rect 408,8 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 416.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 416.81,14.82 15.2x15.19 fill=#45403c
screen rect 448,14 1x16 fill=#18181b33
screen path M475.44,17.51 C475.48,17.63 475.5,17.75 475.5,17.88 C475.5,18.5 475,19 474.38,19 L472.62,19 C472,19 471.5,18.5 471.5,17.88 C471.5,17.75 471.52,17.63 471.56,17.51 L472.98,13.47 C473.16,12.98 473.84,12.98 474.02,13.47 L475.44,17.51 Z fill=#cd0000 clip=463,12 20x20
screen path M476,17.88 C476,18.77 475.27,19.5 474.38,19.5 L472.62,19.5 C471.73,19.5 471,18.77 471,17.88 C471,17.7 471.03,17.51 471.09,17.34 L472.51,13.3 C472.84,12.37 474.16,12.37 474.49,13.3 L475.91,17.34 C475.97,17.51 476,17.7 476,17.88 Z stroke=#18181b/1 clip=463,12 20x20
screen path 14 commands in 467,17.99 13x50.01 fill=#f4f4f4 clip=463,12 20x20
screen path 14 commands in 467.5,18.49 12x49.01 stroke=#18181b/1 clip=463,12 20x20
screen path M476.1,20.37 L479,27 C477.57,25.9 475.49,26.45 474.79,28.11 L474,30 L474,19 C474.91,19 475.74,19.54 476.1,20.37 Z fill=#dbdbdb6e clip=463,12 20x20
screen path M473,19 L474,19 L474,19 L474,31 L474,31 L473,31 L473,31 L473,19 L473,19 Z fill=#b5b5b5aa clip=463,12 20x20
screen path M506.4,15.77 L515.38,16.24 C517.04,16.33 518.32,17.74 518.26,19.4 L517.88,28.39 C517.81,30.04 516.41,31.32 514.76,31.23 L505.77,30.76 C504.12,30.67 502.83,29.26 502.9,27.6 L503.28,18.61 C503.35,16.96 504.74,15.68 506.4,15.77 Z fill=#ffeab0
screen path M506.38,16.27 L515.36,16.74 C516.74,16.81 517.81,17.99 517.76,19.37 L517.38,28.36 C517.32,29.74 516.16,30.8 514.78,30.73 L505.79,30.26 C504.41,30.19 503.34,29.01 503.4,27.63 L503.78,18.64 C503.83,17.26 505,16.2 506.38,16.27 Z stroke=#45403c/1
screen path M500,15 L500,26 C500,27.1 500.9,28 502,28 L513,28 C514.11,28 515,27.1 515,26 L515,22.88 C515,17 511,13 507.4,13 L502,13 C500.9,13 500,13.9 500,15 Z fill=#ffeab0
screen path M502,13.5 L507.4,13.5 C510.64,13.5 514.5,17.19 514.5,22.88 L514.5,26 C514.5,26.83 513.83,27.5 513,27.5 L502,27.5 C501.17,27.5 500.5,26.83 500.5,26 L500.5,15 C500.5,14.17 501.17,13.5 502,13.5 Z stroke=#45403c/1
screen path M507.4,13.5 C507.52,13.5 507.66,13.54 507.84,13.61 C509.9,14.45 509.86,17.23 508.82,19.21 C508.73,19.38 508.87,19.58 509.06,19.55 L509.69,19.45 C511.45,19.17 513.38,19.71 514.07,21.35 C514.39,22.12 514.5,22.74 514.5,23 stroke=#45403c/1
screen path M537,13.5 L544,13.5 C544.83,13.5 545.5,14.17 545.5,15 L545.5,22 C545.5,22.83 544.83,23.5 544,23.5 L537,23.5 C536.17,23.5 535.5,22.83 535.5,22 L535.5,15 C535.5,14.17 536.17,13.5 537,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M546,20.5 L546,20.5 C548.49,20.5 550.5,22.51 550.5,25 L550.5,25 C550.5,27.49 548.49,29.5 546,29.5 L546,29.5 C543.51,29.5 541.5,27.49 541.5,25 L541.5,25 C541.5,22.51 543.51,20.5 546,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 547.5,13.5 7.21x7.21 fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z fill=#e8e8e8
screen path M571.5,18 L571.5,15 C571.5,13.9 572.4,13 573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,18 Z fill=#edebe3
screen path M571.5,18 L587.5,18 stroke=#45403c/1
screen path M574.5,14.5 L574.5,14.5 C575.05,14.5 575.5,14.95 575.5,15.5 L575.5,15.5 C575.5,16.05 575.05,16.5 574.5,16.5 L574.5,16.5 C573.95,16.5 573.5,16.05 573.5,15.5 L573.5,15.5 C573.5,14.95 573.95,14.5 574.5,14.5 Z fill=#45403c
screen path M577.5,14.5 L577.5,14.5 C578.05,14.5 578.5,14.95 578.5,15.5 L578.5,15.5 C578.5,16.05 578.05,16.5 577.5,16.5 L577.5,16.5 C576.95,16.5 576.5,16.05 576.5,15.5 L576.5,15.5 C576.5,14.95 576.95,14.5 577.5,14.5 Z fill=#45403c
screen path M580.5,14.5 L580.5,14.5 C581.05,14.5 581.5,14.95 581.5,15.5 L581.5,15.5 C581.5,16.05 581.05,16.5 580.5,16.5 L580.5,16.5 C579.95,16.5 579.5,16.05 579.5,15.5 L579.5,15.5 C579.5,14.95 579.95,14.5 580.5,14.5 Z fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z stroke=#45403c/1
screen path M584.37,15.6 L588.57,16.73 C589.81,17.06 590.55,18.34 590.21,19.58 L587.79,28.61 C587.46,29.85 586.19,30.58 584.95,30.25 L580.75,29.13 C579.51,28.79 578.77,27.52 579.1,26.28 L581.52,17.25 C581.85,16.01 583.13,15.27 584.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M581.56,26.75 L585.43,27.79 stroke=#45403c/1
screen path 56 commands in 610,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 646.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 647.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 677,14 1x16 fill=#18181b33
screen path 25 commands in 693.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 695.33,15.33 16.11x16.11 fill=#45403c
screen rect 726,14 1x16 fill=#18181b33
screen text "100%" 744,8 box-h=28 12/16 #52525c middle
screen path M780.5,20.75 L783,23.25 L785.5,20.75 stroke=#45403c66/0.83
screen shadow 491,256 219x34 r=10 blur=16 fill=#c7c1bc80
screen shadow 497,268 207x22 r=4 blur=8 fill=#0000002e
screen rect 491,252 219x34 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen text "Small" 502,257 box-h=24 12/16 #30303094 middle
screen path M559,267.5 L562,270.5 L565,267.5 stroke=#30303094/1
screen text "Sans" 584,257 box-h=24 12/16 #30303094 middle
screen path M631,267.5 L634,270.5 L637,267.5 stroke=#30303094/1
screen rect 654,261 1x16 fill=#18181b33
screen rect 663,257 42x24 r=6 fill=#e7e5e4
screen ellipse 667,261 16x16 fill=#b8d8c8 stroke=#0000001f/1/inside
screen path M690,267.5 L693,270.5 L696,267.5 stroke=#303030/1
screen shadow 585,293 198x34 r=10 blur=16 fill=#c7c1bc80
screen shadow 591,305 186x22 r=4 blur=8 fill=#0000002e
screen rect 585,289 198x34 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen ellipse 594,300 12x12 fill=#fdf8f5 stroke=#0000001f/1/inside
screen ellipse 618,300 12x12 fill=#c8b8d8 stroke=#0000001f/1/inside
screen ellipse 642,300 12x12 fill=#b0c4d8 stroke=#0000001f/1/inside
screen ellipse 666,300 12x12 fill=#b0d0d8 stroke=#0000001f/1/inside
screen ellipse 686,296 20x20 stroke=#b8d8c8/2/inside
screen ellipse 690,300 12x12 fill=#b8d8c8 stroke=#0000001f/1/inside
screen ellipse 714,300 12x12 fill=#ffe18e stroke=#0000001f/1/inside
screen ellipse 738,300 12x12 fill=#e8ccb0 stroke=#0000001f/1/inside
screen ellipse 762,300 12x12 fill=#e8b4b8 stroke=#0000001f/1/inside
