native/crates/specular-scene/tests/snapshots/panels__control_pressed.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen path 24 commands in 416.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 416.81,14.82 15.2x15.19 fill=#45403c
screen rect 448,14 1x16 fill=#18181b33
screen rect 457,8 32x28 r=6 fill=#fdf8f5
screen path M475.44,17.51 C475.48,17.63 475.5,17.75 475.5,17.88 C475.5,18.5 475,19 474.38,19 L472.62,19 C472,19 471.5,18.5 471.5,17.88 C471.5,17.75 471.52,17.63 471.56,17.51 L472.98,13.47 C473.16,12.98 473.84,12.98 474.02,13.47 L475.44,17.51 Z fill=#cd0000 clip=463,12 20x20
screen path M476,17.88 C476,18.77 475.27,19.5 474.38,19.5 L472.62,19.5 C471.73,19.5 471,18.77 471,17.88 C471,17.7 471.03,17.51 471.09,17.34 L472.51,13.3 C472.84,12.37 474.16,12.37 474.49,13.3 L475.91,17.34 C475.97,17.51 476,17.7 476,17.88 Z stroke=#18181b/1 clip=463,12 20x20
screen path 14 commands in 467,17.99 13x50.01 fill=#f4f4f4 clip=463,12 20x20
screen path 14 commands in 467.5,18.49 12x49.01 stroke=#18181b/1 clip=463,12 20x20
screen path M476.1,20.37 L479,27 C477.57,25.9 475.49,26.45 474.79,28.11 L474,30 L474,19 C474.91,19 475.74,19.54 476.1,20.37 Z fill=#dbdbdb6e clip=463,12 20x20
screen path M473,19 L474,19 L474,19 L474,31 L474,31 L473,31 L473,31 L473,19 L473,19 Z fill=#b5b5b5aa clip=463,12 20x20
screen path M506.4,15.77 L515.38,16.24 C517.04,16.33 518.32,17.74 518.26,19.4 L517.88,28.39 C517.81,30.04 516.41,31.32 514.76,31.23 L505.77,30.76 C504.12,30.67 502.83,29.26 502.9,27.6 L503.28,18.61 C503.35,16.96 504.74,15.68 506.4,15.77 Z fill=#ffeab0
screen path M506.38,16.27 L515.36,16.74 C516.74,16.81 517.81,17.99 517.76,19.37 L517.38,28.36 C517.32,29.74 516.16,30.8 514.78,30.73 L505.79,30.26 C504.41,30.19 503.34,29.01 503.4,27.63 L503.78,18.64 C503.83,17.26 505,16.2 506.38,16.27 Z stroke=#45403c/1
screen path M500,15 L500,26 C500,27.1 500.9,28 502,28 L513,28 C514.11,28 515,27.1 515,26 L515,22.88 C515,17 511,13 507.4,13 L502,13 C500.9,13 500,13.9 500,15 Z fill=#ffeab0
screen path M502,13.5 L507.4,13.5 C510.64,13.5 514.5,17.19 514.5,22.88 L514.5,26 C514.5,26.83 513.83,27.5 513,27.5 L502,27.5 C501.17,27.5 500.5,26.83 500.5,26 L500.5,15 C500.5,14.17 501.17,13.5 502,13.5 Z stroke=#45403c/1
screen path M507.4,13.5 C507.52,13.5 507.66,13.54 507.84,13.61 C509.9,14.45 509.86,17.23 508.82,19.21 C508.73,19.38 508.87,19.58 509.06,19.55 L509.69,19.45 C511.45,19.17 513.38,19.71 514.07,21.35 C514.39,22.12 514.5,22.74 514.5,23 stroke=#45403c/1
screen path M537,13.5 L544,13.5 C544.83,13.5 545.5,14.17 545.5,15 L545.5,22 C545.5,22.83 544.83,23.5 544,23.5 L537,23.5 C536.17,23.5 535.5,22.83 535.5,22 L535.5,15 C535.5,14.17 536.17,13.5 537,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M546,20.5 L546,20.5 C548.49,20.5 550.5,22.51 550.5,25 L550.5,25 C550.5,27.49 548.49,29.5 546,29.5 L546,29.5 C543.51,29.5 541.5,27.49 541.5,25 L541.5,25 C541.5,22.51 543.51,20.5 546,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 547.5,13.5 7.21x7.21 fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z fill=#e8e8e8
screen path M571.5,18 L571.5,15 C571.5,13.9 572.4,13 573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,18 Z fill=#edebe3
screen path M571.5,18 L587.5,18 stroke=#45403c/1
screen path M574.5,14.5 L574.5,14.5 C575.05,14.5 575.5,14.95 575.5,15.5 L575.5,15.5 C575.5,16.05 575.05,16.5 574.5,16.5 L574.5,16.5 C573.95,16.5 573.5,16.05 573.5,15.5 L573.5,15.5 C573.5,14.95 573.95,14.5 574.5,14.5 Z fill=#45403c
screen path M577.5,14.5 L577.5,14.5 C578.05,14.5 578.5,14.95 578.5,15.5 L578.5,15.5 C578.5,16.05 578.05,16.5 577.5,16.5 L577.5,16.5 C576.95,16.5 576.5,16.05 576.5,15.5 L576.5,15.5 C576.5,14.95 576.95,14.5 577.5,14.5 Z fill=#45403c
screen path M580.5,14.5 L580.5,14.5 C581.05,14.5 581.5,14.95 581.5,15.5 L581.5,15.5 C581.5,16.05 581.05,16.5 580.5,16.5 L580.5,16.5 C579.95,16.5 579.5,16.05 579.5,15.5 L579.5,15.5 C579.5,14.95 579.95,14.5 580.5,14.5 Z fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z stroke=#45403c/1
screen path M584.37,15.6 L588.57,16.73 C589.81,17.06 590.55,18.34 590.21,19.58 L587.79,28.61 C587.46,29.85 586.19,30.58 584.95,30.25 L580.75,29.13 C579.51,28.79 578.77,27.52 579.1,26.28 L581.52,17.25 C581.85,16.01 583.13,15.27 584.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M581.56,26.75 L585.43,27.79 stroke=#45403c/1
screen path 56 commands in 610,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 646.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 647.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 677,14 1x16 fill=#18181b33
screen path 25 commands in 693.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 695.33,15.33 16.11x16.11 fill=#45403c
screen rect 726,14 1x16 fill=#18181b33
screen text "100%" 744,8 box-h=28 12/16 #52525c middle
screen path M780.5,20.75 L783,23.25 L785.5,20.75 stroke=#45403c66/0.83
screen path M24.92,16.75 L33.08,16.75 C33.73,16.75 34.25,17.27 34.25,17.92 L34.25,26.08 C34.25,26.73 33.73,27.25 33.08,27.25 L24.92,27.25 C24.27,27.25 23.75,26.73 23.75,26.08 L23.75,17.92 C23.75,17.27 24.27,16.75 24.92,16.75 Z stroke=#52525c/1.17 opacity=0.5
screen path M27.25,16.75 L27.25,27.25 stroke=#52525c/1.17 opacity=0.5
screen shadow 432,56 336x34 r=10 blur=16 fill=#c7c1bc80
screen shadow 438,68 324x22 r=4 blur=8 fill=#0000002e
screen rect 432,52 336x34 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen rect 437,57 24x24 r=6 fill=#e7e5e4
screen path M450.31,66.73 C450.31,67.32 449.84,67.8 449.25,67.8 L448.1,67.8 C447.51,67.8 447.03,67.32 447.03,66.73 C447.03,66.61 447.05,66.49 447.09,66.38 L448.02,63.73 C448.24,63.12 449.1,63.12 449.32,63.73 L450.25,66.38 C450.29,66.49 450.31,66.61 450.31,66.73 Z fill=#cd0000 stroke=#18181b/0.66 clip=442,62 14x14
screen path 14 commands in 444.73,67.14 7.88x32.16 fill=#f4f4f4 stroke=#18181b/0.66 clip=442,62 14x14
screen path M450.38,68.37 L452.28,72.72 C451.34,72 449.98,72.36 449.52,73.45 L449,74.69 L449,67.47 C449.6,67.47 450.14,67.82 450.38,68.37 Z fill=#dbdbdb6e clip=442,62 14x14
screen path M448.34,67.47 L449,67.47 L449,67.47 L449,75.34 L449,75.34 L448.34,75.34 L448.34,75.34 L448.34,67.47 L448.34,67.47 Z fill=#b5b5b5aa clip=442,62 14x14
screen path M479.19,65.98 C479.19,66.73 478.58,67.34 477.83,67.34 L476.87,67.34 C476.12,67.34 475.51,66.73 475.51,65.98 L475.51,64.93 C475.51,64.66 475.69,64.42 475.95,64.34 L478.4,63.64 C478.8,63.52 479.19,63.82 479.19,64.22 L479.19,65.98 Z fill=#cd0000 stroke=#cd0000/0.88 clip=470,62 14x14
screen path 18 commands in 473.24,66.63 8.23x34.13 fill=#f4f4f4 stroke=#797875/0.88 clip=470,62 14x14
screen path M477.7,67.08 L478.61,67.08 C479.04,67.08 479.4,67.38 479.48,67.8 C480.08,71.12 480.19,70.7 480.94,72.5 C480.1,71.75 478.77,72.05 478.33,73.09 L477.7,74.6 L477.7,67.08 Z fill=#dbdbdb6e clip=470,62 14x14
screen path M473.85,73.38 L480.85,73.38 L480.85,73.38 L480.85,74.25 L480.85,74.25 L473.85,74.25 L473.85,74.25 L473.85,73.38 L473.85,73.38 Z fill=#b5b5b5aa clip=470,62 14x14
screen path M473.5,73.9 L481.2,73.9 L481.2,73.9 L481.2,76.7 L481.2,76.7 L473.5,76.7 L473.5,76.7 L473.5,73.9 L473.5,73.9 Z fill=#cd0000 clip=470,62 14x14
screen rect 497,61 1x16 fill=#18181b33
screen rect 506,57 24x24 r=6 fill=#e7e5e4
screen path M510,68.92 C512,67.38 513.49,65.72 515.5,65.88 C519.5,66.2 512.93,73.26 518,72.99 C522,72.78 520,65 526,65 stroke=#3f3f46/1
screen rect 534,57 24x24 r=6 fill=#e7e5e4
screen path M538,68.92 C540,67.38 541.49,65.72 543.5,65.88 C547.5,66.2 540.93,73.26 546,72.99 C550,72.78 548,65 554,65 stroke=#3f3f46/3
screen rect 566,61 1x16 fill=#18181b33
screen ellipse 579,63 12x12 fill=#1c1917 stroke=#0000001f/1/inside
screen ellipse 603,63 12x12 fill=#9414b9 stroke=#0000001f/1/inside
screen ellipse 627,63 12x12 fill=#005cd4 stroke=#0000001f/1/inside
screen ellipse 651,63 12x12 fill=#0071a2 stroke=#0000001f/1/inside
screen ellipse 675,63 12x12 fill=#008000 stroke=#0000001f/1/inside
screen ellipse 699,63 12x12 fill=#855c00 stroke=#0000001f/1/inside
screen ellipse 723,63 12x12 fill=#a83d00 stroke=#0000001f/1/inside
screen ellipse 743,59 20x20 stroke=#cd0000/2/inside
screen ellipse 747,63 12x12 fill=#cd0000 stroke=#0000001f/1/inside
