native/crates/specular-scene/tests/snapshots/panels__edge_popup.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen rect 408,8 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 416.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 416.81,14.82 15.2x15.19 fill=#45403c
screen rect 448,14 1x16 fill=#18181b33
screen path M475.44,17.51 C475.48,17.63 475.5,17.75 475.5,17.88 C475.5,18.5 475,19 474.38,19 L472.62,19 C472,19 471.5,18.5 471.5,17.88 C471.5,17.75 471.52,17.63 471.56,17.51 L472.98,13.47 C473.16,12.98 473.84,12.98 474.02,13.47 L475.44,17.51 Z fill=#cd0000 clip=463,12 20x20
screen path M476,17.88 C476,18.77 475.27,19.5 474.38,19.5 L472.62,19.5 C471.73,19.5 471,18.77 471,17.88 C471,17.7 471.03,17.51 471.09,17.34 L472.51,13.3 C472.84,12.37 474.16,12.37 474.49,13.3 L475.91,17.34 C475.97,17.51 476,17.7 476,17.88 Z stroke=#18181b/1 clip=463,12 20x20
screen path 14 commands in 467,17.99 13x50.01 fill=#f4f4f4 clip=463,12 20x20
screen path 14 commands in 467.5,18.49 12x49.01 stroke=#18181b/1 clip=463,12 20x20
screen path M476.1,20.37 L479,27 C477.57,25.9 475.49,26.45 474.79,28.11 L474,30 L474,19 C474.91,19 475.74,19.54 476.1,20.37 Z fill=#dbdbdb6e clip=463,12 20x20
screen path M473,19 L474,19 L474,19 L474,31 L474,31 L473,31 L473,31 L473,19 L473,19 Z fill=#b5b5b5aa clip=463,12 20x20
screen path M506.4,15.77 L515.38,16.24 C517.04,16.33 518.32,17.74 518.26,19.4 L517.88,28.39 C517.81,30.04 516.41,31.32 514.76,31.23 L505.77,30.76 C504.12,30.67 502.83,29.26 502.9,27.6 L503.28,18.61 C503.35,16.96 504.74,15.68 506.4,15.77 Z fill=#ffeab0
screen path M506.38,16.27 L515.36,16.74 C516.74,16.81 517.81,17.99 517.76,19.37 L517.38,28.36 C517.32,29.74 516.16,30.8 514.78,30.73 L505.79,30.26 C504.41,30.19 503.34,29.01 503.4,27.63 L503.78,18.64 C503.83,17.26 505,16.2 506.38,16.27 Z stroke=#45403c/1
screen path M500,15 L500,26 C500,27.1 500.9,28 502,28 L513,28 C514.11,28 515,27.1 515,26 L515,22.88 C515,17 511,13 507.4,13 L502,13 C500.9,13 500,13.9 500,15 Z fill=#ffeab0
screen path M502,13.5 L507.4,13.5 C510.64,13.5 514.5,17.19 514.5,22.88 L514.5,26 C514.5,26.83 513.83,27.5 513,27.5 L502,27.5 C501.17,27.5 500.5,26.83 500.5,26 L500.5,15 C500.5,14.17 501.17,13.5 502,13.5 Z stroke=#45403c/1
screen path M507.4,13.5 C507.52,13.5 507.66,13.54 507.84,13.61 C509.9,14.45 509.86,17.23 508.82,19.21 C508.73,19.38 508.87,19.58 509.06,19.55 L509.69,19.45 C511.45,19.17 513.38,19.71 514.07,21.35 C514.39,22.12 514.5,22.74 514.5,23 stroke=#45403c/1
screen path M537,13.5 L544,13.5 C544.83,13.5 545.5,14.17 545.5,15 L545.5,22 C545.5,22.83 544.83,23.5 544,23.5 L537,23.5 C536.17,23.5 535.5,22.83 535.5,22 L535.5,15 C535.5,14.17 536.17,13.5 537,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M546,20.5 L546,20.5 C548.49,20.5 550.5,22.51 550.5,25 L550.5,25 C550.5,27.49 548.49,29.5 546,29.5 L546,29.5 C543.51,29.5 541.5,27.49 541.5,25 L541.5,25 C541.5,22.51 543.51,20.5 546,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 547.5,13.5 7.21x7.21 fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z fill=#e8e8e8
screen path M571.5,18 L571.5,15 C571.5,13.9 572.4,13 573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,18 Z fill=#edebe3
screen path M571.5,18 L587.5,18 stroke=#45403c/1
screen path M574.5,14.5 L574.5,14.5 C575.05,14.5 575.5,14.95 575.5,15.5 L575.5,15.5 C575.5,16.05 575.05,16.5 574.5,16.5 L574.5,16.5 C573.95,16.5 573.5,16.05 573.5,15.5 L573.5,15.5 C573.5,14.95 573.95,14.5 574.5,14.5 Z fill=#45403c
screen path M577.5,14.5 L577.5,14.5 C578.05,14.5 578.5,14.95 578.5,15.5 L578.5,15.5 C578.5,16.05 578.05,16.5 577.5,16.5 L577.5,16.5 C576.95,16.5 576.5,16.05 576.5,15.5 L576.5,15.5 C576.5,14.95 576.95,14.5 577.5,14.5 Z fill=#45403c
screen path M580.5,14.5 L580.5,14.5 C581.05,14.5 581.5,14.95 581.5,15.5 L581.5,15.5 C581.5,16.05 581.05,16.5 580.5,16.5 L580.5,16.5 C579.95,16.5 579.5,16.05 579.5,15.5 L579.5,15.5 C579.5,14.95 579.95,14.5 580.5,14.5 Z fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z stroke=#45403c/1
screen path M584.37,15.6 L588.57,16.73 C589.81,17.06 590.55,18.34 590.21,19.58 L587.79,28.61 C587.46,29.85 586.19,30.58 584.95,30.25 L580.75,29.13 C579.51,28.79 578.77,27.52 579.1,26.28 L581.52,17.25 C581.85,16.01 583.13,15.27 584.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M581.56,26.75 L585.43,27.79 stroke=#45403c/1
screen path 56 commands in 610,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 646.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 647.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 677,14 1x16 fill=#18181b33
screen path 25 commands in 693.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 695.33,15.33 16.11x16.11 fill=#45403c
screen rect 726,14 1x16 fill=#18181b33
screen text "100%" 744,8 box-h=28 12/16 #52525c middle
screen path M780.5,20.75 L783,23.25 L785.5,20.75 stroke=#45403c66/0.83
screen shadow 491,308 219x34 r=10 blur=16 fill=#c7c1bc80
screen shadow 497,320 207x22 r=4 blur=8 fill=#0000002e
screen rect 491,304 219x34 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen ellipse 500,313 16x16 fill=#cd0000 stroke=#0000001f/1/inside
screen path M523,319.5 L526,322.5 L529,319.5 stroke=#30303094/1
screen rect 546,313 1x16 fill=#18181b33
screen rect 555,309 40x24 r=6 fill=#e7e5e4
screen path M573.25,316.42 C573.53,316.42 573.75,316.64 573.75,316.92 C573.75,317.19 573.53,317.42 573.25,317.42 L562.75,317.42 C562.47,317.42 562.25,317.19 562.25,316.92 C562.25,316.64 562.47,316.42 562.75,316.42 L573.25,316.42 Z fill=#303030
screen path M563,319 L573,319 C573.28,319 573.5,319.22 573.5,319.5 L573.5,320.5 C573.5,320.78 573.28,321 573,321 L563,321 C562.72,321 562.5,320.78 562.5,320.5 L562.5,319.5 C562.5,319.22 562.72,319 563,319 Z stroke=#303030/1
screen path M563,323 L573,323 C573.28,323 573.5,323.22 573.5,323.5 L573.5,325.5 C573.5,325.78 573.28,326 573,326 L563,326 C562.72,326 562.5,325.78 562.5,325.5 L562.5,323.5 C562.5,323.22 562.72,323 563,323 Z stroke=#303030/1
screen path M582,319.5 L585,322.5 L588,319.5 stroke=#303030/1
screen rect 603,313 1x16 fill=#18181b33
screen rect 612,309 24x24 r=6 fill=#e7e5e4
screen path M624,325.08 L619.92,321 L624,316.92 M628.08,321 L619.92,321 stroke=#303030/1.17
screen rect 640,309 24x24 r=6 fill=#e7e5e4
screen path M647.92,321 L656.08,321 M652,316.92 L656.08,321 L652,325.08 stroke=#303030/1.17
screen rect 672,313 1x16 fill=#18181b33
screen path 18 commands in 687.75,315.17 10.5x11.67 stroke=#30303094/1.17
screen shadow 512,345 127x34 r=10 blur=16 fill=#c7c1bc80
screen shadow 518,357 115x22 r=4 blur=8 fill=#0000002e
screen rect 512,341 127x34 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen rect 517,346 24x24 r=6 fill=#e7e5e4
screen path M521,357.92 C523,356.38 524.49,354.72 526.5,354.88 C530.5,355.2 523.93,362.26 529,361.99 C533,361.78 531,354 537,354 stroke=#3f3f46/1
screen path M549,357.92 C551,356.38 552.49,354.72 554.5,354.88 C558.5,355.2 551.93,362.26 557,361.99 C561,361.78 559,354 565,354 stroke=#3f3f46/3
screen rect 575,348 1x20 fill=#e4e4e7
screen path M588,358 L600,358 stroke=#30303094/2
screen rect 610,346 24x24 r=6 fill=#e7e5e4
screen path M616.5,357 L617.5,357 C618.05,357 618.5,357.45 618.5,358 L618.5,358 C618.5,358.55 618.05,359 617.5,359 L616.5,359 C615.95,359 615.5,358.55 615.5,358 L615.5,358 C615.5,357.45 615.95,357 616.5,357 Z fill=#303030
screen path M621.5,357 L622.5,357 C623.05,357 623.5,357.45 623.5,358 L623.5,358 C623.5,358.55 623.05,359 622.5,359 L621.5,359 C620.95,359 620.5,358.55 620.5,358 L620.5,358 C620.5,357.45 620.95,357 621.5,357 Z fill=#303030
screen path M626.5,357 L627.5,357 C628.05,357 628.5,357.45 628.5,358 L628.5,358 C628.5,358.55 628.05,359 627.5,359 L626.5,359 C625.95,359 625.5,358.55 625.5,358 L625.5,358 C625.5,357.45 625.95,357 626.5,357 Z fill=#303030
